--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "npm start"
+    "postinstall": "npm run build", 
+    "start": "node index.js" 
   },
+  "engines": {
+    "node": ">=14.0.O",
+    "npm": ">=7.7.0"
+ },
   "repository": {
     "type": "git",
     "url": "y"
