--- a/package.json
+++ b/package.json
@@ -5,13 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "postinstall": "npm run build", 
-    "start": "node index.js" 
+    "start": "npm start"
   },
-  "engines": {
-    "node": ">=14.0.O",
-    "npm": ">=7.7.0"
- },
   "repository": {
     "type": "git",
     "url": "y"
