added amplify.yml file

--- a/amplify.yml
+++ b/amplify.yml
@@ -9,7 +9,7 @@ backend:
     build:
       commands:        
         - echo starting backend server
-        - npm run start
+        - node index.js
     postBuild:
         commands:
         - cd ..
