changed amplify.yml file

--- a/amplify.yml
+++ b/amplify.yml
@@ -9,7 +9,8 @@ backend:
     build:
       commands:        
         - echo starting backend server
-        - node index.js
+        - cd server
+        - npm run start
     postBuild:
         commands:
         - cd ..
