added amplify.yml file

--- a/amplify.yml
+++ b/amplify.yml
@@ -9,6 +9,7 @@ backend:
     build:
       commands:        
         - echo starting backend server
+        - cd server
         - npm run start
     postBuild:
         commands:
